@@ -67,7 +67,7 @@ class ATDetectorNode extends PhetPNode {
         private static final double VALUE_X_MARGIN = 30; // specific to image files
         private static final double VALUE_Y_OFFSET = 67; // specific to image files
         private static final DecimalFormat ABSORBANCE_FORMAT = new DecimalFormat( "0.000" );
-        private static final DecimalFormat TRANSMITTANCE_FORMAT = new DecimalFormat( "0.0" );
+        private static final DecimalFormat TRANSMITTANCE_FORMAT = new DecimalFormat( "0.000" );
         private static final String NO_VALUE = "-";
 
         public BodyNode( final ATDetector detector, final ModelViewTransform mvt ) {
